ozone: Remove USE_LINEAR when allocating modeset buffers.

crrev.com/2533163002 changed the way we allocate modeset buffers.
Unfortunately the new use flags introduced a regression that makes it
not possible to pageflip from a modeset buffer to a buffer queue buffer.
This CL restores the old modeset buffer use flags in order to fix the
regression, while we work on a long term solution.

BUG=673026
TEST=manually tried the step described in the bug and verified it now works.

Review-Url: https://codereview.chromium.org/2568243004
Cr-Commit-Position: refs/heads/master@{#438193}

Former-commit-id: a17cccbc2dbf0bf2a0df1d98ebbc773491e3e4b4